name:                fwgl
version:             0.2.0.0
synopsis:            A library for cross-platform and browser interactive applications.
description:         FWGL is a library for cross-platform interactive applications and games. FWGL lets you create and manage windows/canvases, handle input events and load images and models independently from the backend. FWGL used to include a render engine that is now called Ombra. There are two backends: fwgl-glfw and fwgl-javascript.
homepage:            https://github.com/ziocroc/FWGL
stability:           provisional
license:             BSD3
license-file:        LICENSE
author:              Luca "ziocroc" Prezzavento
maintainer:          ziocroc@gmail.com
category:            Game, Game Engine, Javascript
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     FWGL, FWGL.Key, FWGL.Input, FWGL.Model, FWGL.Model.OBJ, FWGL.Image, FWGL.Backend
  other-modules:       FWGL.Internal.STVectorLen
  other-extensions:    FlexibleContexts, RankNTypes, GADTs, TypeOperators, KindSignatures, DataKinds, MultiParamTypeClasses, TypeSynonymInstances, FlexibleInstances, ConstraintKinds, TypeFamilies, ExistentialQuantification, GeneralizedNewtypeDeriving, PolyKinds, UndecidableInstances, ScopedTypeVariables, OverlappingInstances, FunctionalDependencies, DeriveDataTypeable, ImpredicativeTypes, RebindableSyntax, NullaryTypeClasses, Arrows
  build-depends:       base >=4.7 && <4.9, Yampa >=0.9 && <0.10, hashable >=1.2 && <1.3, unordered-containers >=0.2 && <0.3, vector >=0.10 && <0.12, transformers
  hs-source-dirs:      .
  default-language:    Haskell2010
